# tf-test

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  terraform-plan.yml
config/: caller-worker.yaml  engine.yaml  gateway.yaml  inference-worker.yaml
docs/: API.md  ARCHITECTURE.md  HARDENING.md  RUNBOOK.md  SCALE-100X.md  SETUP.md  TROUBLESHOOTING.md
scripts/: bootstrap-state.sh
systemd/: iii-caller-worker.service  iii-engine.service  iii-gateway.service  iii-inference-worker.service
terraform/: ec2.tf  iam.tf  main.tf  outputs.tf  security-groups.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf  vpc.tf
terraform/user-data/: caller-worker.sh.tftpl  engine.sh.tftpl  gateway.sh.tftpl  inference-worker.sh.tftpl
workers/: README.md
workers/caller-worker/: package-lock.json  package.json  tsconfig.json
workers/caller-worker/src/: index.ts
workers/inference-worker/: pyproject.toml  requirements.txt
workers/inference-worker/src/inference_worker/: main.py
workers/inference-worker/tests/: test_handler.py
