[project]
name = "inference-worker"
version = "0.1.0"
description = "iii inference worker (Python)"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
